--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<title>HTML 5 Boilerplate</title>
-<link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Parallax Scrolling Example</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<script src="index.js"></script>
+    <section class="parallax parallax1">
+        <h1>Welcome to the World of Bee Products</h1>
+        <body>
+            Bees are nature's little alchemists, transforming the nectar of flowers into an array of products that are both delicious and beneficial. Explore the fascinating world of bee products, where tradition meets natural wellness.
+        </body>
+    </section>
+    <section class="parallax parallax2">
+        <h1>Honey</h1>
+        <body>
+            Honey is a natural sweetener made by bees from flower nectar, rich in sugars like fructose and glucose. It contains antioxidants, has antibacterial properties, and is used in cooking, medicine, and skincare. Raw honey retains more nutrients than processed honey. It has a long shelf life if stored properly and can crystallize but is easily liquefied by warming.
+        </body>
+    </section>
+    <section class="parallax parallax3">
+        <h1>Beeswax</h1>
+        <body>
+            
+        </body>
+    </section>
+    <section class="parallax parallax4">
+        <h1>Section 4</h1>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
