--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
 <body>
     <section class="parallax parallax1">
         <h1>Welcome to the World of Bee Products</h1>
-        <body>
-            Bees are nature's little alchemists, transforming the nectar of flowers into an array of products that are both delicious and beneficial. Explore the fascinating world of bee products, where tradition meets natural wellness.
-        </body>
+        <p>Bees are nature's little alchemists, transforming the nectar of flowers into an array of products that are both delicious and beneficial. Explore the fascinating world of bee products, where tradition meets natural wellness.</p>
     </section>
+
     <section class="parallax parallax2">
         <h1>Honey</h1>
-        <body>
-            Honey is a natural sweetener made by bees from flower nectar, rich in sugars like fructose and glucose. It contains antioxidants, has antibacterial properties, and is used in cooking, medicine, and skincare. Raw honey retains more nutrients than processed honey. It has a long shelf life if stored properly and can crystallize but is easily liquefied by warming.
-        </body>
+        <p>Honey is a natural sweetener made by bees from flower nectar, rich in sugars like fructose and glucose. It contains antioxidants, has antibacterial properties, and is used in cooking, medicine, and skincare. Raw honey retains more nutrients than processed honey. It has a long shelf life if stored properly and can crystallize but is easily liquefied by warming.</p>
     </section>
+
     <section class="parallax parallax3">
         <h1>Beeswax</h1>
-        <body>
-            
-        </body>
+        <p>Beeswax is a natural wax produced by honey bees. It's used in a variety of products including candles, cosmetics, and food packaging. Beeswax has a sweet, honey-like aroma and is valued for its moisturizing properties in skincare. It's also used as a coating for cheese and as a lubricant for tools and equipment.</p>
     </section>
+
     <section class="parallax parallax4">
-        <h1>Section 4</h1>
+        <h1>Royal Jelly</h1>
+        <p>Royal Jelly is a creamy substance produced by worker bees to feed the queen bee and young larvae. It is rich in proteins, vitamins, and amino acids, and is often marketed as a dietary supplement for its potential health benefits.</p>
     </section>
+
     <script src="script.js"></script>
 </body>
 </html>
