--- a/index.html
+++ b/index.html
@@ -7,24 +7,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="parallax parallax1">
+    <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#honey">Honey</a>
+        <a href="#beeswax">Beeswax</a>
+        <a href="#royal-jelly">Royal Jelly</a>
+        <a href="secondpage.html">Propolis</a>
+        <a href="thirdpage.html">Bee Pollen</a>
+    </nav>
+
+    <section id="home" class="parallax parallax1">
         <h1>Welcome to the World of Bee Products</h1>
-        <p>Bees are nature's little alchemists, transforming the nectar of flowers into an array of products that are both delicious and beneficial. Explore the fascinating world of bee products, where tradition meets natural wellness.</p>
     </section>
 
-    <section class="parallax parallax2">
+    <section class="text-section">
+        <p>Bee products like honey, beeswax, royal jelly, and pollen are vital for health, the environment, and the economy. Honey serves as a natural sweetener with antibacterial and antioxidant properties, used in food and medicine. Beeswax is widely used in candles, cosmetics, and skincare products. Royal jelly and pollen provide nutritional and immune-boosting benefits. Bees are also essential for pollination, supporting biodiversity and agriculture, which helps sustain ecosystems and food supplies worldwide.</p>
+    </section>
+
+    <section id="honey" class="parallax parallax2">
         <h1>Honey</h1>
-        <p>Honey is a natural sweetener made by bees from flower nectar, rich in sugars like fructose and glucose. It contains antioxidants, has antibacterial properties, and is used in cooking, medicine, and skincare. Raw honey retains more nutrients than processed honey. It has a long shelf life if stored properly and can crystallize but is easily liquefied by warming.</p>
     </section>
 
-    <section class="parallax parallax3">
+    <section class="text-section">
+        <p>Honey is a natural, sweet substance produced by bees from the nectar of flowers. After collecting the nectar, bees process it by mixing it with enzymes and storing it in honeycombs. Over time, the nectar thickens through evaporation, resulting in honey. This product is not only appreciated for its flavor but also for its wide range of uses. Honey has long been recognized for its health benefits, as it contains antioxidants, has antimicrobial properties, and can soothe sore throats. Additionally, it is commonly used in cooking, skincare, and even traditional medicine.</p>
+    </section>
+
+    <section id="beeswax" class="parallax parallax3">
         <h1>Beeswax</h1>
-        <p>Beeswax is a natural wax produced by honey bees. It's used in a variety of products including candles, cosmetics, and food packaging. Beeswax has a sweet, honey-like aroma and is valued for its moisturizing properties in skincare. It's also used as a coating for cheese and as a lubricant for tools and equipment.</p>
     </section>
 
-    <section class="parallax parallax4">
+    <section class="text-section">
+        <p>Beeswax is a natural wax produced by honeybees to build their honeycombs. It is secreted by worker bees in small flakes and used to construct the hexagonal cells where honey is stored and larvae are raised. Beeswax is harvested from hives during honey extraction and has a wide variety of uses beyond beekeeping. Known for its antibacterial properties and ability to lock in moisture, it is commonly used in skincare products like lotions and lip balms. Additionally, beeswax is a popular ingredient in candles, polishes, and natural remedies due to its natural, non-toxic qualities.</p>
+    </section>
+
+    <section id="royal-jelly" class="parallax parallax4">
         <h1>Royal Jelly</h1>
-        <p>Royal Jelly is a creamy substance produced by worker bees to feed the queen bee and young larvae. It is rich in proteins, vitamins, and amino acids, and is often marketed as a dietary supplement for its potential health benefits.</p>
+    </section>
+
+    <section class="text-section">
+        <p>Royal jelly is a nutrient-rich secretion produced by worker honeybees to feed the queen bee. It contains a mix of proteins, vitamins, and fatty acids, which contribute to the queen’s larger size, longevity, and fertility. Worker bees produce it from glands in their heads, and it plays a vital role in the queen's development. Often marketed as a health supplement, royal jelly is believed to offer benefits like boosting immunity and improving skin health, though scientific evidence for these claims is still being researched.</p>
     </section>
 
     <script src="script.js"></script>
