--- a/secondpage.html
+++ b/secondpage.html
@@ -16,7 +16,7 @@
         <a href="thirdpage.html">Bee Pollen</a>
     </nav>
 
-    <section class="parallax" style="background-image: url('img/propolis-banner.jpg');">
+    <section class="parallax" style="background-image: url('img/pexels-ironic-702935.jpg');">
         <h1>Propolis</h1>
     </section>
 
@@ -31,7 +31,7 @@
         <section class="video-section">
             <h2>Watch This Video on Propolis</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/j3AT_1lwPGY?si=rIwgfvvExAv-bBQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" 
-        </section>
+        </section>  
         <img src="img/propolis-uses.jpg" alt="Uses of Propolis" class="info-image">
 
         <h2>Health Benefits of Propolis</h2>
