--- a/thirdpage.html
+++ b/thirdpage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extra Page 2</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Bee Pollen</title>
+    <link rel="stylesheet" href="third-style.css">
 </head>
 <body>
     <nav class="navbar">
@@ -17,8 +17,29 @@
     </nav>
 
     <section class="info-section">
-        <h1>Extra Page 2</h1>
-        <p>Welcome to Extra Page 2. This page is separate from the main content, with additional information.</p>
+        <h1>Bee Pollen: Nature's Superfood</h1>
+        <p>Bee pollen is a nutrient-rich substance produced by bees as they gather nectar from flowers. It's packed with proteins, vitamins, and minerals, making it a popular supplement for health enthusiasts.</p>
+        <p>Learn more about its benefits, how it’s harvested, and the science behind its healing properties below.</p>
+    </section>
+
+    <section class="info-section">
+        <h2>Health Benefits of Bee Pollen</h2>
+        <ul>
+            <li>Rich in antioxidants, helping to combat oxidative stress.</li>
+            <li>Boosts the immune system and promotes overall well-being.</li>
+            <li>May reduce inflammation and support digestive health.</li>
+            <li>Contains essential amino acids and vitamins like B-complex, C, and E.</li>
+        </ul>
+    </section>
+
+    <section class="info-section">
+        <h2>How is Bee Pollen Harvested?</h2>
+        <p>Beekeepers use special traps at the hive entrance to collect pollen from the bees’ legs as they return from foraging. This process ensures the bees still have enough pollen to sustain the hive while providing humans with a small portion of this natural treasure.</p>
+    </section>
+
+    <section class="info-section">
+        <h2>Did You Know?</h2>
+        <p>It takes a single bee working for an entire day to gather just one pellet of pollen!</p>
     </section>
 </body>
 </html>
