Very Final outcome

--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
         <h1>Welcome to the World of Bee Products</h1>
     </section>
 
+    <section class="image-description">
+        <p>An image of two bees on a flower</p>
+    </section>
+
     <section class="text-section">
         <p>Bee products like honey, beeswax, royal jelly, and pollen are vital for health, the environment, and the economy. Honey serves as a natural sweetener with antibacterial and antioxidant properties, used in food and medicine. Beeswax is widely used in candles, cosmetics, and skincare products. Royal jelly and pollen provide nutritional and immune-boosting benefits. Bees are also essential for pollination, supporting biodiversity and agriculture, which helps sustain ecosystems and food supplies worldwide.</p>
     </section>
 
     <section id="honey" class="parallax parallax2">
         <h1>Honey</h1>
+    </section>
+
+    <section class="image-description">
+        <p>An image of honeycomb on some metal wire</p>
     </section>
 
     <section class="text-section">
@@ -36,12 +44,20 @@
         <h1>Beeswax</h1>
     </section>
 
+    <section class="image-description">
+        <p>An image of bees on some beeswax containing honey</p>
+    </section>
+
     <section class="text-section">
         <p>Beeswax is a natural wax produced by honeybees to build their honeycombs. It is secreted by worker bees in small flakes and used to construct the hexagonal cells where honey is stored and larvae are raised. Beeswax is harvested from hives during honey extraction and has a wide variety of uses beyond beekeeping. Known for its antibacterial properties and ability to lock in moisture, it is commonly used in skincare products like lotions and lip balms. Additionally, beeswax is a popular ingredient in candles, polishes, and natural remedies due to its natural, non-toxic qualities.</p>
     </section>
 
     <section id="royal-jelly" class="parallax parallax4">
         <h1>Royal Jelly</h1>
+    </section>
+
+    <section class="image-description">
+        <p>An image of royal jelly in a jar</p>
     </section>
 
     <section class="text-section">
