--- a/secondpage.html
+++ b/secondpage.html
@@ -19,13 +19,14 @@
     <section class="parallax" style="background-image: url('img/pexels-ironic-702935.jpg');">
         <h1>Propolis</h1>
     </section>
-
+    <section class="image-description"></section>
+        <p>An image of bees on a piece of wood</p>
+    </section>
     <section class="info-section">
         <h2>What is Propolis?</h2>
         <p>Propolis is a resin-like material produced by bees from the buds of poplar and cone-bearing trees. It's used by bees to seal cracks in their hives, providing a barrier against bacteria and other pathogens.</p>
         
         <img src="img/240_F_145125889_fLtYryWKpGoX1imUUwAjSgyg57zTXxE3.jpg" alt="Harvesting Propolis" class="info-image">
-
         <h2>How is Propolis Harvested?</h2>
         <p>Beekeepers collect propolis by scraping it from the hive or using special screens that encourage bees to deposit the material. After collection, it’s purified and used in various products.</p>
         <section class="video-section">
